minor change to documentup config

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script type="text/javascript">
     DocumentUp.document({
       repo:  "jeromegn/documentup",
+      name: "DocumentUp",
       twitter: "jeromegn"
     });
   </script>
