added much more to the readme

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title></title>
-  <script type="text/javascript" src="documentup.js"></script>
-  <script type="text/javascript">
-    DocumentUp.document({
-      repo:  "jeromegn/documentup",
-      name: "DocumentUp",
-      twitter: "jeromegn"
-    });
-  </script>
-</head>
-<body>
-</body>
+  <head>
+    <title></title>
+    <script type="text/javascript" src="documentup.js"></script>
+    <script type="text/javascript">
+      DocumentUp.document({
+        repo:  "jeromegn/documentup",
+        name: "DocumentUp",
+        twitter: "jeromegn"
+      });
+    </script>
+  </head>
+  <body>
+  </body>
 </html>
