--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <script type="text/javascript" src="documentup.js"></script>
+    <script type="text/javascript" src="documentup.min.js"></script>
     <script type="text/javascript">
       DocumentUp.document({
         repo:  "jeromegn/documentup",
