--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="documentup.min.js"></script>
     <script type="text/javascript">
