[fixes #10] Base64 decode with UTF-8 support

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="documentup.min.js"></script>
     <script>
       DocumentUp.document({
-        repo:  "jeromegn/documentup",
+        repo:  "remiprev/teamocil",
         name: "DocumentUp",
         twitter: "jeromegn"
       });
