Oops, had a test repo in there + added DocumentUp Twitter account

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <script src="documentup.min.js"></script>
     <script>
       DocumentUp.document({
-        repo:  "remiprev/teamocil",
+        repo:  "jeromegn/documentup",
         name: "DocumentUp",
-        twitter: "jeromegn"
+        twitter: [
+          "jeromegn"
+          "DocumentUp"
+        ]
       });
     </script>
   </head>
