Oops, had a test repo in there + added DocumentUp Twitter account

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         repo:  "jeromegn/documentup",
         name: "DocumentUp",
         twitter: [
-          "jeromegn"
+          "jeromegn",
           "DocumentUp"
         ]
       });
