Added IE8+ support

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="documentup.min.js"></script>
+    <script src="documentup.js"></script>
     <script>
       DocumentUp.document({
         repo:  "jeromegn/documentup",
