don't add meta tags dynamically, that doesn't seem to work... added to the recommended starting template

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script src="documentup.js"></script>
+    <script src="documentup.min.js"></script>
     <script>
       DocumentUp.document({
         repo:  "jeromegn/documentup",
