--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script src="documentup.js"></script>
+    <script src="documentup.min.js"></script>
 
     <!-- Simple instantiation -->
     <script>
