[fixes #25] Added proper config parsing

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <!-- Simple instantiation -->
     <script>
-      DocumentUp.document({
-        repo:  "jeromegn/documentup",
+      DocumentUp.document("jeromegn/documentup",
         name: "DocumentUp",
         twitter: [
           "jeromegn",
