oops, forgot one undo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <!-- Simple instantiation -->
     <script>
-      DocumentUp.document("jeromegn/documentup",
+      DocumentUp.document({
+        repo:  "jeromegn/documentup",
         name: "DocumentUp",
         twitter: [
           "jeromegn",
