started on a theme and added robots.txt

--- a/test/fixtures/gh_page_test.html
+++ b/test/fixtures/gh_page_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../../documentup_test.js"></script>
+    <script src="http://documentup.com/documentup.js"></script>
     <script type="text/javascript">
       DocumentUp.document({
         repo: 'thedersen/backbone.validation',
